# simulate_data

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
docs/: 2026-06-23-te-insertion-gff.md
scripts/: run.sh  run_pipeline.sh
src/simulate_data/: __init__.py  cli.py  utils.py
src/simulate_data/modules/: __init__.py  fastq.py  reads_illumina.py  reads_ont.py  reads_pacbio.py  sv_placement.py  te_insertion.py
tests/: conftest.py  test_cli.py  test_reads_illumina.py  test_reads_ont.py  test_reads_pacbio.py  test_sv_placement.py  test_te_insertion.py  test_utils.py
tests/data/: mini_genome.fa  mini_known_del.out  mini_te.bed
